--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.16.0",
     "@svgr/webpack": "^8.0.1",
-    "@types/mdx": "^2.0.12",
-    "@types/react": "^19.0.8",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^24.7.0",
+    "@types/react": "^19.2.2",
     "@typescript-eslint/eslint-plugin": "^8.12.0",
     "@typescript-eslint/parser": "^8.12.0",
     "cross-env": "^7.0.3",
